cmake_minimum_required(VERSION 3.22)
# set(CMAKE_C_COMPILER icx)
# set(CMAKE_CXX_COMPILER dpcpp)
# set(CMAKE_CXX_COMPILER /opt/intel/oneapi/compiler/latest/linux/bin/dpcpp)
project(AdvancedCpp)
# set(SYCL_ROOT /opt/intel/oneapi/compiler/latest/linux)
# set(SYCL_INCLUDE_DIR /opt/intel/oneapi/compiler/latest/linux/include)
# set(SYCL_LIB /opt/intel/oneapi/compiler/latest/linux/lib/libsycl.so)
# set(SYCL_FLAGS "-fsycl")
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# find_package(IntelDPCPP REQUIRED)
find_package(Boost REQUIRED)
add_executable(AdvancedCpp variadic_tmpl.cpp)
add_executable(AlgoTest algo_test.cpp)


# add_executable(AdvancedCpp hof.cpp) 
#add_executable(AdvancedCpp memory.cpp)
# target_compile_options(AdvancedCpp PUBLIC -fsycl) 
# target_include_directories(AdvancedCpp PUBLIC ${SYCL_INCLUDE_DIR})
# target_link_libraries(AdvancedCpp PUBLIC  sycl -fsycl)
add_executable(DoubleLinkList double_linked_list.cpp)
add_executable(BST bst.cpp) 
add_executable(TypeErasue type_erasure.cpp)   